--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
     <div>
-      <img src="./img/IMG_20181020_001528.jpg" width="300" height="470" alt="Soy sho breo" />
+      <img src="./img/Foto1 Editada.jpg" width="400" height="400" alt="Soy sho breo" />
       <h2>Datos personales</h2>
     </div>
     <div>
